POC for CLI output interface

--- a/_config/dev.yml
+++ b/_config/dev.yml
@@ -11,3 +11,7 @@ SilverStripe\Dev\DevelopmentAdmin:
       controller: SilverStripe\Dev\TaskRunner
       links:
         tasks: 'See a list of build tasks to run'
+
+SilverStripe\Core\Injector\Injector:
+  CliOutputInterface:
+    class: SilverStripe\Dev\Cli\Output
