--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_script:
   - printf "\n" | pecl install imagick
   - if [[ $PHPCS_TEST ]]; then pyrus install pear/PHP_CodeSniffer; fi
   - phpenv rehash
-  - phpenv config-rm xdebug.ini
+  - if [[ $PHPUNIT_COVERAGE_TEST == "" ]]; then phpenv config-rm xdebug.ini; fi
   - echo 'memory_limit = 2048M' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
 # Temporarily update to 1.5.x-dev of composer
