FIX Enable code coverage builds with phpdbg and 7.1.7
PHP 7.1.7 is currently not segfaulting when generating coverage reports with phpdbg

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,4 +13,12 @@ Requires PHPUnit ^5.7
     <testsuite name="cms">
         <directory>cms/tests</directory>
     </testsuite>
+    <filter>
+        <whitelist addUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">.</directory>
+            <exclude>
+                <directory suffix=".php">tests/</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
