--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,10 @@ before_script:
 # Bootstrap dependencies
   - if [[ $PHPUNIT_TEST == cms ]] || [[ $BEHAT_TEST == cms ]]; then php ./cms/tests/bootstrap/mysite.php; fi
 
+# Set mock base URL
+  - echo 'SS_BASE_URL=http://localhost:8080/' >> .env
+
 # Start behat services
-  - if [[ $BEHAT_TEST ]] || [[ $PHPUNIT_COVERAGE_TEST ]]; then echo 'SS_BASE_URL=http://localhost:8080/' >> .env; fi
   - if [[ $BEHAT_TEST ]]; then mkdir artifacts; fi
   - if [[ $BEHAT_TEST ]]; then cp composer.lock artifacts/; fi
   - if [[ $BEHAT_TEST ]]; then sh -e /etc/init.d/xvfb start; sleep 3; fi
